--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     compile files('src/main/resources/JTransforms-3.1-with-dependencies.jar')
     compile files('src/main/resources/JTransforms-3.1-sources.jar')
     compile files('src/main/resources/JTransforms-3.1-javadoc.jar')
+    compile files('src/main/resources/commons-math3-3.5.jar')
+    compile files('src/main/resources/commons-math3-3.5-javadoc.jar')
 }
