--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 22 08:08:48 EST 2015
+#Wed Dec 09 18:47:52 PST 2015
 sdk.dir=/Users/rpang/android-sdk-macosx
